remove pie border

--- a/style.css
+++ b/style.css
@@ -131,12 +131,11 @@ table {
 body {
   height: 100vh;
   font-family: Lato;
-  background: transparent;
+  background: black;
 }
 
 .chart-box {
-  border: 1px solid #ddd;
-  box-shadow: 0 22px 35px -16px rgba(0, 0, 0, 0.1);
+  display: flex;
 }
 
 #doughnut {
